CHANGES
*******

0.19 (unreleased)
=================

- Nothing changed yet.


0.18 (2017-03-17)
=================

* **New**: The `load`` API, which allows you to define how incoming JSON
  (through a POST, PUT or PATH request) will be converted to a Python object and
  how it will be validated. This feature lets you plug in external
  serialization and validation libraries, such as Marshmallow, Colander,
  Cerberus, Jsonschema or Voluptuous.

* **Removed**: ``morepath.body_model_predicate`` is removed from the
  Morepath API together with the ``morepath.App.load_json`` directive
  and the ``morepath.request.body_obj`` property.
  If you use the ``load_json`` directive, this functionality has been moved
  to a separate `more.body_model`_ package. Use this package instead by
  subclassing your App from `more.body_model.BodyModelApp`.

  .. _more.body_model: https://github.com/morepath/more.body_model

* Uploading huge files lead to excessive memory consumption as the whole body
  was consumed for no good reason. This is now fixed.

  See `#504`_

  .. _#504: https://github.com/morepath/morepath/issues/504

* Fixes link prefix not applying to mounted applications.

  See '#516'

  .. _#516: https://github.com/morepath/morepath/issues/516

0.17 (2016-12-23)
=================

* **Removed**: The class ``morepath.ViewRegistry`` is gone.

* Upload universal wheels to pypi during release.

* Refactored and simplified implementation of ``ConverterRegistry``.

* Bugfix: exception views in mounted apps weren't looked up correctly
  anymore.

* Adds compatibility with WebOb 1.7.

* Removed extra spaces after the colon in json.
  For example: {"foo": "bar"} is now {"foo":"bar"}.

* Morepath now keeps track of what code was used to resolve a path and
  a view. You use `more.whytool`_ to get a command line tool that
  provides insight in what code was used for a request.

.. _`more.whytool`: https://pypi.python.org/pypi/morepath

0.16.1 (2016-10-04)
===================
